Bugfix when opening the panes, the aviary editor was not immediately visible.

--- a/src/editor/editor.styl
+++ b/src/editor/editor.styl
@@ -39,7 +39,7 @@
     // It hides the forefront photo.
     &.hide-photo
         .photo-wrap
-            opacity 0
+            visibility hidden
             transition none
 
 
@@ -52,7 +52,7 @@
         .editor-pane-right,
         #avpw_holder
             transition none
-            opacity 0
+            visibility hidden
 
     // Transition luminance used to change the photo after an import
     &[data-transition='luminance']
